# pipen-runinfo

./: .gitignore  .pre-commit-config.yaml  README.md  pipen_runinfo.py  pyproject.toml  setup.py
.github/workflows/: build.yml
example/: example.py  exmple.py
examples/: example.py
pipen_runinfo/: __init__.py  session_info.py
tests/: test_init.py  test_session_info.py  test_version.py
