[tool.poetry]
name = "pipen-runinfo"
version = "0.2.1"
description = "Generate running information for jobs in pipen pipelines"
authors = ["pwwang <pwwang@pwwang.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
pipen = "^0.10.1"

[tool.poetry.build]
generate-setup-file = true

[tool.poetry.plugins.pipen]
runinfo = "pipen_runinfo:PipenRuninfoPlugin"

[tool.poetry.group.dev.dependencies]
pytest = "^7"
pytest-cov = "^4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
addopts = "-v -n auto --cov pipen_runinfo --cov-report xml:.coverage.xml --cov-report term-missing"
filterwarnings = [ "error" ]
# console_output_style = "progress"
# junit_family = "xunit1"

[tool.black]
line-length = 80
target-version = ['py38', 'py39', 'py310', 'py311']
include = '\.pyi?$'

[tool.mypy]
ignore_missing_imports = true
allow_redefinition = true
disable_error_code = ["attr-defined", "no-redef", "union-attr", "import"]
show_error_codes = true
strict_optional = false
