[tool.poetry]
name = "pipen-runinfo"
version = "0.9.1"
description = "Generate running information for jobs in pipen pipelines"
authors = ["pwwang <pwwang@pwwang.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
# pipen = "^0.15.5"
pipen = "0.17.*"

[tool.poetry.build]
generate-setup-file = true

[tool.poetry.plugins.pipen]
runinfo = "pipen_runinfo:PipenRuninfoPlugin"

[tool.poetry.group.dev.dependencies]
pytest = "^8"
pytest-cov = "^6"

[tool.poetry.group.examples.dependencies]
google-cloud-storage = "^3"
python-dotenv = "^1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
addopts = "-v --cov pipen_runinfo --cov-report xml:.coverage.xml --cov-report term-missing"
filterwarnings = [ "ignore::pytest.PytestUnraisableExceptionWarning" ]
# console_output_style = "progress"
# junit_family = "xunit1"

[tool.black]
line-length = 88
target-version = ['py39', 'py310', 'py311', 'py312']
include = '\.pyi?$'

[tool.mypy]
ignore_missing_imports = true
allow_redefinition = true
disable_error_code = ["attr-defined", "no-redef", "union-attr", "import"]
show_error_codes = true
strict_optional = false
