[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pipen-runinfo"
version = "1.1.3"
description = "Generate running information for jobs in pipen pipelines"
authors = [{name = "pwwang", email = "pwwang@pwwang.com"}]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "pipen>=1.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-cov>=6",
]
examples = [
    "panpath[async-gs]>=0.4.8",
    "python-dotenv>=1",
]

[project.entry-points.pipen]
runinfo = "pipen_runinfo:PipenRuninfoPlugin"

[tool.pytest.ini_options]
addopts = "-v --cov pipen_runinfo --cov-report xml:.coverage.xml --cov-report term-missing"
filterwarnings = [ "ignore::pytest.PytestUnraisableExceptionWarning" ]
# console_output_style = "progress"
# junit_family = "xunit1"

[tool.black]
line-length = 88
target-version = ['py39', 'py310', 'py311', 'py312']
include = '\.pyi?$'

[tool.mypy]
ignore_missing_imports = true
allow_redefinition = true
disable_error_code = ["attr-defined", "no-redef", "union-attr", "import"]
show_error_codes = true
strict_optional = false

[dependency-groups]
dev = [
    "flake8>=7.3.0",
]
